code/build/debug
In file included from /home/chris/lookup/prog/src/tree.cpp:1:0:
/home/chris/lookup/prog/src/tree.h:122:7: warning: unused parameter ‘_fn’ [-Wunused-parameter]
  void build(std::string & _fn) {
       ^
/home/chris/lookup/prog/src/tree.h:171:7: warning: unused parameter ‘_fn’ [-Wunused-parameter]
  void build(std::string & _fn) {
       ^
/home/chris/lookup/prog/src/tree.cpp: In function ‘int main(int, char**)’:
/home/chris/lookup/prog/src/tree.cpp:14:19: error: no matching function for call to ‘BTree::build(char*&)’
  bt->build(argv[1]);
                   ^
/home/chris/lookup/prog/src/tree.cpp:14:19: note: candidate is:
In file included from /home/chris/lookup/prog/src/tree.cpp:1:0:
/home/chris/lookup/prog/src/tree.h:64:7: note: virtual void BTree::build(std::string&)
  void build(std::string & _fn) {
       ^
/home/chris/lookup/prog/src/tree.h:64:7: note:   no known conversion for argument 1 from ‘char*’ to ‘std::string& {aka std::basic_string<char>&}’
make[2]: *** [src/CMakeFiles/tree.dir/tree.cpp.o] Error 1
make[1]: *** [src/CMakeFiles/tree.dir/all] Error 2
make: *** [all] Error 2
